# kaggle-Estimation-of-Music-Genre

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: custom.md
conf/: main.yaml
conf/data/: base.yaml
conf/model/: xgboost.yaml
conf/optuna/: base.yaml
dataset/: __init__.py  dataset.py  test.csv  train.csv
experiment/: __init__.py  custom_optuna.py  experiment.py  visualizer.py
model/: __init__.py  utils.py  xgboost.py
